fixed absolute path images to relative for the website

--- a/about.html
+++ b/about.html
@@ -39,22 +39,22 @@
         </section>
         <div id="msection-offer">
             <section id="section-offer">
-                <img id="img-aspect" src="/assests/images/Gym Equipment.avif" alt="">
+                <img id="img-aspect" src="assests/images/Gym Equipment.avif" alt="">
                 <h3>GYM Equipment</h3>
                 <p> At Kaizen Fitness, our cutting-edge gym gear elevates your workouts. Our carefully curated selection maximizes every training aspect, merging technology and performance for impactful results.</p>
             </section>
             <section id="section-offer">
-                <img id="img-aspect" src="/assests/images/fitness assessment.jpeg" alt="">
+                <img id="img-aspect" src="assests/images/fitness assessment.jpeg" alt="">
                 <h3>FITNESS ASSESSMENTS</h3>
                 <p>Experience in-depth fitness assessments at Kaizen Fitness. Our detailed analysis uncovers your strengths, areas for improvement, and personalized goals, paving the way for a customized fitness plan exclusively for you.</p>
             </section>
             <section id="section-offer">
-                <img id="img-aspect"  src="/assests/images/personal training.jpeg" alt="">
+                <img id="img-aspect"  src="assests/images/personal training.jpeg" alt="">
                 <h3>PERSONAL TRAINING</h3>
                 <p>Kaizen Fitness Personal Training offers tailored sessions guided by certified trainers. Every workout aligns with your goals, fitness level, and preferences, ensuring personalized progress and success.</p>
             </section>
             <section id="section-offer">
-                <img id="img-aspect"  src="/assests/images/nutrition coaching.jpeg" alt="">
+                <img id="img-aspect"  src="assests/images/nutrition coaching.jpeg" alt="">
                 <h3>NUTRITIONAL COACHING</h3>
                 <p>Fuel your journey to a healthier you with Kaizen Fitness Nutrition Coaching. Our certified coaches craft personalized nutrition plans that harmonize with your goals, lifestyle, and dietary choices, fostering sustainable health and vitality.</p>
             </section>
