--- a/about.html
+++ b/about.html
@@ -10,26 +10,10 @@
     <!--Title-->
     <title>Kaizen fitness</title>
     <!--Favicon-->
-    <link
-      rel="android-chrome-192x192"
-      sizes="192x192"
-      href="../favicon_io/android-chrome-192x192.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="../favicon_io/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      sizes="32x32"
-      href="../favicon_io/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      sizes="16x16"
-      href="../favicon_io/favicon-16x16.png"
-    />
+    <link rel="android-chrome-192x192" sizes="192x192" href="assests/favicon_io/android-chrome-192x192.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png"/>
+    <link rel="icon" sizes="32x32" href="assests/favicon_io/favicon-32x32.png"/>
+    <link rel="icon" sizes="16x16" href="assests/favicon_io/favicon-16x16.png"/>
     <!--Stylesheet-->
     <link rel="stylesheet" href="assests/css/style.css">
 </head>
@@ -65,7 +49,7 @@
                 <p>Experience in-depth fitness assessments at Kaizen Fitness. Our detailed analysis uncovers your strengths, areas for improvement, and personalized goals, paving the way for a customized fitness plan exclusively for you.</p>
             </section>
             <section id="section-offer">
-                <img id="img-aspect"  src="../images/personalt.jpeg" alt="">
+                <img id="img-aspect"  src="assests/images/personalt.jpeg" alt="">
                 <h3>PERSONAL TRAINING</h3>
                 <p>Kaizen Fitness Personal Training offers tailored sessions guided by certified trainers. Every workout aligns with your goals, fitness level, and preferences, ensuring personalized progress and success.</p>
             </section>
