i changed the name of the path in the personal training section

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 <p>Experience in-depth fitness assessments at Kaizen Fitness. Our detailed analysis uncovers your strengths, areas for improvement, and personalized goals, paving the way for a customized fitness plan exclusively for you.</p>
             </section>
             <section id="section-offer">
-                <img id="img-aspect"  src="assests/images/personalt.jpeg" alt="">
+                <img id="img-aspect"  src="assests/images/personal training.jpeg" alt="">
                 <h3>PERSONAL TRAINING</h3>
                 <p>Kaizen Fitness Personal Training offers tailored sessions guided by certified trainers. Every workout aligns with your goals, fitness level, and preferences, ensuring personalized progress and success.</p>
             </section>
